수정 수정 그리고 수정

--- a/Mypractice/app/src/main/res/layout/frag3.xml
+++ b/Mypractice/app/src/main/res/layout/frag3.xml
@@ -124,15 +124,17 @@
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
-                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
+              <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="30dp"
                     android:padding="15dp"
                     app:autoPlay="false"
-                    app:showYouTubeButton="true"
+                    app:showYouTubeButton="false"
                     app:videoId="fXRoWjmCc-w">
                 </com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView>
+
+
             </LinearLayout>
 
             <LinearLayout
